Bug 331818 xpidl crashes when no file name is given on the command line patch by mh+mozilla@glandium.org changes per dbradley r=timeless sr=shaver